// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipNavigation Renders the UI snapshot correctly 1`] = `
<nav
  aria-label="Skip Navigation"
  className="css-1xdhyk6"
  data-testid="ds-skipNavigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="#mainContent"
        rel={null}
        target={null}
      >
        Skip to Main Content
      </a>
    </li>
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="https://www.nypl.org/accessibility"
        rel={null}
        target={null}
      >
        Click to learn about accessibility at the Library
      </a>
    </li>
  </ul>
</nav>
`;

exports[`SkipNavigation Renders the UI snapshot correctly 2`] = `
<nav
  aria-label="Skip Navigation"
  className="css-1xdhyk6"
  data-testid="ds-skipNavigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="customId"
        rel={null}
        target={null}
      >
        Skip to Main Content
      </a>
    </li>
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="https://www.nypl.org/accessibility"
        rel={null}
        target={null}
      >
        Click to learn about accessibility at the Library
      </a>
    </li>
  </ul>
</nav>
`;

exports[`SkipNavigation Renders the UI snapshot correctly 3`] = `
<nav
  aria-label="Skip Navigation"
  className="css-kle7zy"
  data-testid="ds-skipNavigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="#mainContent"
        rel={null}
        target={null}
      >
        Skip to Main Content
      </a>
    </li>
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="https://www.nypl.org/accessibility"
        rel={null}
        target={null}
      >
        Click to learn about accessibility at the Library
      </a>
    </li>
  </ul>
</nav>
`;

exports[`SkipNavigation Renders the UI snapshot correctly 4`] = `
<nav
  aria-label="Skip Navigation"
  className="css-1xdhyk6"
  data-testid="props"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="#mainContent"
        rel={null}
        target={null}
      >
        Skip to Main Content
      </a>
    </li>
    <li>
      <a
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="https://www.nypl.org/accessibility"
        rel={null}
        target={null}
      >
        Click to learn about accessibility at the Library
      </a>
    </li>
  </ul>
</nav>
`;
